# cpp2octave

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpp2octave.cpp
cpp2oct/: CMakeLists.txt  c2o_behavior_gen.cpp  c2o_behavior_gen.hpp  c2o_datafile_gen.cpp  c2o_datafile_gen.h  c2o_datafile_handler.cpp  c2o_datafile_handler.h  c2o_fname_handler.cpp  c2o_fname_handler.h  cpp2oct.cpp  cpp2oct.h  cpp2oct_core.cpp  cpp2oct_core.h  cpp2oct_script_file.cpp  cpp2oct_script_file.h
example_output/: myOct.m
example_output/support_myOct/: data
